<resources>
    <string name="app_name">МГТУ ГА Расписание</string>
    <string name="settings">Настройки</string>
    <string name="waiting_text">Подождите...</string>
    <string name="error_connection">Проверьте соединение с интернетом</string>
    <string name="data_already_fresh">Обновление не требуется</string>
    <string name="pair_counter_text">Пара</string>
    <string name="data_updated">Обновление</string>
    <string name="subgroup_lang">Подгруппа по ин. Яз</string>
    <string name="subgroup_lab">Подгруппа по лабораторным работам</string>
    <string name="today_label">(Сегодня)</string>
    <string name="first">"1"</string>
    <string name="second">"2"</string>
    <string name="three">"3"</string>
    <string name="four">"4"</string>
    <string name="five">"5"</string>

    <string-array name="subgroup">
        <item>@string/first</item>
        <item>@string/second</item>
    </string-array>
    <string name="course">Курс</string>
    <array name="courses">
        <item>@string/first</item>
        <item>@string/second</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
    </array>
    <string name="stream">Поток</string>
    <array name="streams">
        <item>@string/first</item>
        <item>@string/second</item>
        <item>@string/three</item>
        <item>@string/four</item>
    </array>
    <string name="faculty">Факультет</string>
    <array name="faculties">
        <item>@string/appmath_and_cs</item>
        <item>@string/mech</item>
        <item>@string/fask</item>
        <item>@string/fuvt</item>
    </array>

    <array name="faculties_values">
        <item>@string/appmath_and_cs</item>
        <item>@string/mech_link</item>
        <item>@string/fask</item>
        <item>@string/fuvt</item>
    </array>
    <string name="mech_link">"Механический факультет"</string>

    <string name="appmath_and_cs">"Факультет прикладной математики и вычислительной техники (ФПМиВТ)"</string>
    <string name="mech">"Механический факультет"</string>
    <string name="fask">"Факультет авиационных систем и комплексов (ФАСК)"</string>
    <string name="fuvt">"Факультет управления на воздушном транспорте (ФУВТ)"</string>

    <string name="spec">Направление подготовки</string>
    <array name="app_math_and_cs_list">
        <item>@string/app_math</item>
        <item>@string/bi</item>
        <item>@string/evm</item>
    </array>
    <array name="app_math_and_cs_list_values">
        <item>@string/app_math_val</item>
        <item>@string/bi_val</item>
        <item>@string/evm_val</item>
    </array>

    <array name="mech_list">
        <item>@string/m</item>
        <item>@string/btp</item>
        <item>@string/mb</item>
        <item>@string/mbu</item>
        <item>@string/mmag</item>
    </array>

    <string name="m">МФ</string>
    <string name="btp">БТП</string>
    <string name="mb">Мб</string>
    <string name="mbu">Мбу</string>
    <string name="mmag">Ммаг</string>

    <string name="mv">М</string>
    <string name="btpv">БТПб</string>
    <string name="mbv">Мб</string>
    <string name="mbuv">Мбу</string>
    <string name="mmagv">Ммаг</string>

    <array name="mech_list_values">
        <item>@string/mv</item>
        <item>@string/btpv</item>
        <item>@string/mbv</item>
        <item>@string/mbuv</item>
        <item>@string/mmagv</item>
    </array>

    <array name="fask_list_values">
        <item>@string/akb</item>
        <item>@string/akmag</item>
        <item>@string/rst</item>
        <item>@string/evsak</item>
    </array>


    <array name="fask_list">
        <item>@string/ak</item>
        <item>@string/akmag</item>
        <item>@string/rs</item>
        <item>@string/evsak</item>
    </array>

    <string name="filenotfound_snackbar">Проверьте правильность настроек</string>

    <array name="fuvt_list">
        <item>@string/op</item>
        <item>@string/so</item>
        <item>@string/uvd</item>
        <item>@string/uvdbobp</item>
        <item>@string/ek</item>
    </array>

    <array name="fuvt_list_values">
        <item>@string/opb</item>
        <item>@string/sob</item>
        <item>@string/uvdb</item>
        <item>@string/uvdbobp</item>
        <item>@string/ekb</item>
    </array>
    <string name="obp">(ОБП)</string>

    <string name="app_math_val">ПМб</string>
    <string name="bi_val">БИТ</string>
    <string name="evm_val">ЭВМб</string>
    <string name="opb">ОПб</string>
    <string name="sob">СОб</string>
    <string name="uvdb">УВДб</string>
    <string name="uvdbobp">УВДб (ОБП)</string>
    <string name="ekb">ЭКб</string>

    <string name="akb">АКб</string>
    <string name="rst">РТ</string>
    <string name="evsak">ЭВСак</string>


    <string name="app_math">ПМ</string>
    <string name="bi">БИ</string>
    <string name="evm">ЭВМ</string>
    <string name="akmag">АКМаг</string>
    <string name="ak">АК</string>
    <string name="rs">РС</string>

    <string name="op">ОП</string>
    <string name="so">СО</string>
    <string name="uvd">УВД</string>
    <string name="ek">ЭК</string>

    <string name="select_started_hint_snackbar">Выберите группу и курс в настройках</string>
    <string name="even_inverse">Инверсия чётности недели</string>
    <string name="even_inverse_description">Включить при отсутствии некоторых занятий в списке</string>
    <string name="update_toolbar">Обновить</string>
    <string name="forced_update_toolbar">Принудительное обновление</string>
    <string name="check_update_when_start">Проверять актуальность при запуске</string>
    <string name="forced_dark_theme">Принудительно включить тёмную тему</string>
    <string name="forced_dark_theme_desc">Требуется перезапуск приложения</string>
    <string name="filenotfound_forced_uri_snackbar">Файл не найден!</string>
    <string name="proto_error">Не указан протокол URL</string>
    <string name="forced_uri_path">Адрес до xls документа</string>
    <string name="forced_uri_path_desc">Указать URL адрес xls с расписанием</string>
    <string name="open_calendar_toolbar">Открыть календарь</string>
    <string name="pair_clipboard">-я пара</string>
    <string name="toast_pair_clipboard">Скопировано!</string>
    <string name="network_violation_cleartext">Незащищённое соединение разрешено только с узлом mstuca.ru</string>
</resources>
