<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/faculty"
        android:key="faculty"
        android:entries="@array/faculties"
        android:entryValues="@array/faculties_values"/>
    <ListPreference
        android:title="@string/spec"
        android:enabled="false"
        android:key="spec" />
    <ListPreference
        android:title="@string/stream"
        android:enabled="false"
        android:entries="@array/streams"
        android:entryValues="@array/streams"
        android:key="stream" />
    <ListPreference
        android:title="@string/course"
        android:key="course"
        android:enabled="false"
        android:entries="@array/courses"
        android:entryValues="@array/courses"/>
    <ListPreference
        android:title="@string/subgroup_lang"
        android:key="subgroup_lang"
        android:defaultValue="@string/first"
        android:enabled="false"
        android:entries="@array/subgroup"
        android:entryValues="@array/subgroup"/>
    <ListPreference
        android:title="@string/subgroup_lab"
        android:defaultValue="@string/first"
        android:key="subgroup_lab"
        android:enabled="false"
        android:entries="@array/subgroup"
        android:entryValues="@array/subgroup"/>
    <EditTextPreference
        android:title="@string/forced_uri_path"
        android:key="forced_uri_path"
        android:summary="@string/forced_uri_path_desc"/>
    <SwitchPreference
        android:defaultValue="true"
        android:title="@string/check_update_when_start"
        android:key="check_update_when_start"/>
    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/forced_dark_theme"
        android:key="forced_dark_theme"
        android:summary="@string/forced_dark_theme_desc"/>
</PreferenceScreen>