<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/update_toolbar"
        android:id="@+id/refresh_toolbar"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="never"/>
    <item
        android:title="@string/forced_update_toolbar"
        android:id="@+id/forced_refresh_toolbar"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/calendar_picker"
        android:title="@string/open_calendar_toolbar"
        android:icon="@drawable/ic_calendar_white_24dp"
        app:showAsAction="always"/>
    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        app:showAsAction="never"/>
</menu>